--- a/todoapp/todo/templates/home.html
+++ b/todoapp/todo/templates/home.html
@@ -136,7 +136,5 @@
 </body>
 
 </html>
-<!-- Owned by Yash Jangid 
-# github_id = im-yash21
-# leetcode_id = im-yash21
-# linkeldn_id = im-yash21  -->
+<!-- Owned by Shivam Agarwal 
+# github_id = EVILxSHIVAY
